add other pages

--- a/other_attempt/signup.html
+++ b/other_attempt/signup.html
@@ -6,13 +6,13 @@
 <body>
     <div class="banner">
         <div class="form-container">
-            <h2>Sign Up</h2>
+            <h1>Sign Up</h1>
             <form>
                 <input type="text" placeholder="Email" class="text-entry">
                 <input type="password" placeholder="Password" class="text-entry">
                 <input type="password" placeholder="Re-type Password" class="text-entry">
-                <a href="#"><button type="submit"><span></span>Sign Up</button></a>
             </form>
+            <a href="home.html"><button type="submit"><span></span>Sign Up</button></a>
             <p>Already have an account? <a href="login.html" class="my-link">Login</a></p>
         </div>
     </div>
