--- a/other_attempt/index.html
+++ b/other_attempt/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="#" class="logo">
+            <img src="#" class="logo"> <!-- Update with your logo path -->
             <ul>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
