--- a/other_attempt/login.html
+++ b/other_attempt/login.html
@@ -6,13 +6,13 @@
 <body>
     <div class="banner">
         <div class="form-container">
-            <h2>Login</h2>
+            <h1>Login</h1>
             <form>
                 <input type="text" placeholder="Email" class="text-entry">
                 <input type="password" placeholder="Password" class="text-entry">
                 <p>Forgot your password? <a href="#" class ="my-link">Reset Passowrd</a></p>
-                <a href="#"><button type="submit"><span></span>Log In</button></a>
             </form>
+            <a href="home.html"><button type="submit"><span></span>Login</button></a>
             <p>Don't have an account? <a href="signup.html" class ="my-link">Sign Up</a></p>
         </div>
     </div>
