--- a/other_attempt/index.html
+++ b/other_attempt/index.html
@@ -6,11 +6,10 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="#" class="logo"> <!-- Update with your logo path -->
+            <a href="index.html"><img src="#" class="logo"></a> <!-- Update with your logo path -->
             <ul>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
-
             </ul>
         </div>
 
