--- a/other_attempt/login.html
+++ b/other_attempt/login.html
@@ -5,6 +5,13 @@
 </head>
 <body>
     <div class="banner">
+        <div class="navbar">
+            <a href="index.html"><img src="#" class="logo"></a> <!-- Update with your logo path -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </div>
+
         <div class="form-container">
             <h1>Login</h1>
             <form>
