--- a/other_attempt/profile.html
+++ b/other_attempt/profile.html
@@ -6,7 +6,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="#" class="logo"> <!-- Update with your logo path -->
+            <a href="home.html"><img src="#" class="logo"></a> <!-- Update with your logo path -->
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
